# pyMetaModel

./: .gitignore  .project  404.html  README.md  index.html  metamodel.puml  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
docs/: index.md
examples/ceur-ws/: ceur-ws.mermaid  ceur-ws.puml  ceur-ws.py  ceur-ws.sidif  ceur-ws.xlsx  ceur-ws.yaml  ceur-ws_puml.txt
examples/city/: city.mermaid  city.puml  city.py  city.sidif  city.xlsx  city.yaml  city_puml.txt
examples/family/: FamilyContext.mermaid  FamilyContext.puml  FamilyContext.py  FamilyContext.sidif  FamilyContext.xlsx  FamilyContext.yaml  FamilyContext_puml.txt
examples/infrastructure/: infrastructure.mermaid  infrastructure.puml  infrastructure.sidif  infrastructure.xlsx  infrastructure.yaml  infrastructure_puml.txt
examples/metamodel/: metamodel.mermaid  metamodel.puml  metamodel.py  metamodel.sidif  metamodel.xlsx  metamodel.yaml  metamodel_puml.txt
examples/scientific-events/: scientific-events.mermaid  scientific-events.puml  scientific-events.py  scientific-events.sidif  scientific-events.xlsx  scientific-events.yaml  scientific-events_puml.txt
examples/smartRQM/: smartRQM.puml  smartRQM.sidif  smartRQM_puml.txt
examples/smwcon/: smwcon.mermaid  smwcon.puml  smwcon.sidif  smwcon.xlsx  smwcon.yaml  smwcon_puml.txt
examples/teaching/: TeachingSchema.mermaid  TeachingSchema.puml  TeachingSchema.py  TeachingSchema.sidif  TeachingSchema.xlsx  TeachingSchema.yaml  TeachingSchema_puml.txt
examples/wiki/: wiki.mermaid  wiki.puml  wiki.py  wiki.sidif  wiki.xlsx  wiki.yaml  wiki_puml.txt
meta/: metamodel.py  metamodel_cmd.py  mw.py  profiler.py  sidif2linkml.py  smw_type.py  uml.py  version.py
scripts/: blackisort  genexamples  install
search/: search_index.json
tests/: basemwtest.py  basesmwtest.py  basetest.py  test_generators.py  test_linkml.py  test_metamodel.py  test_mw.py  test_plantuml.py  test_sidif.py
