# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyMetaModel"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" },
]
readme = "README.md"
# flit_core.config.ConfigError: license field should be <class 'dict'>, not <class 'str'>
license = { file="LICENSE" }
dependencies = [
	# https://pypi.org/project/pybasemkit/
	# https://github.com/WolfgangFahl/pybasemkit
	# Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
	"pybasemkit>=0.0.4",
	# https://pypi.org/project/py-sidif/
	'py-sidif>=0.2.0',
	# https://github.com/urllib3/urllib3
	'urllib3',
]

requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "meta/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/pyMetaModel"
Documentation = "https://wiki.bitplan.com/index.php/PyMetaModel"
Source = "https://github.com/WolfgangFahl/pyMetaModel"

[project.optional-dependencies]
test = [
	"green",
]
# LinkML support
# https://linkml.io/
linkml = [
	# https://pypi.org/project/linkml/
	'linkml>=1.8.5',
	# https://pypi.org/project/linkml-runtime/
	'linkml-runtime>=1.8.3',
]
# MediaWiki https://www.mediawiki.org/wiki/MediaWiki
# and
# SMW - Semantic MediaWiki https://www.semantic-mediawiki.org/wiki/Semantic_MediaWiki
# support
smw = [
    # https://pypi.org/project/py-3rdparty-mediawiki/
    'py-3rdparty-mediawiki>=0.14.0',
	# https://pypi.org/project/mwparserfromhell/
	'mwparserfromhell>=0.6.6',
]


[tool.hatch.build.targets.wheel]
only-include = ["meta"]

[tool.hatch.build.targets.wheel.sources]
"meta" = "meta"


[project.scripts]
mm_cmd = "meta.metamodel_cmd:main"
